Fri Apr 18 16:57:44 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdrawable-x11.c (draw_with_images/pixmaps):
	Fix pointer arithmetic on 'void *'. (#108322)

Fri Apr 18 16:31:49 2003  Owen Taylor  <otaylor@redhat.com>

	* configure.in gdk/x11/gdkdisplay-x11.c modules/input/Makefile.am:
	Check for XAddConnectionWatch()/X11R6, and if found, disable XIM and
	use of XAddConnectionWatch. Remove --enable-xim config option.
	Should fix building on X11R6 (#110523, Albert Chin)

Fri Apr 18 15:56:46 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdisplay-x11.[ch] gdk/x11/gdkdrawable-x11.[ch]:
	Patch from Morten Welinder to catch Sun servers	with a 
	broken implementation of the RENDER extension. (#108309)

Fri Apr 18 15:30:38 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkwindow-x11.c (set_text_property): Use
	gdk_free_compound_text(), not g_free(). (#107643,
	Michael Zucchi)

Fri Apr 18 15:11:50 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdisplay-x11.c (_gdk_display_x11_get_type)
	gdk/x11/gdkscreen-x11.c (_gdk_screen_x11_get_type): Fix
	wrong use of base_finalize. (#105126, Sven Neumann)

Fri Apr 18 15:06:00 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkwindow.c (gdk_window_constrain_size): Fix
	'/' vs. '*' problem in aspect ration computations. (#108237)

Fri Apr 18 14:15:09 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdisplay-x11.c (gdk_display_open): 
	* gdk/x11/gdkevents-x11.c (gdk_event_translate): You
	don't get a XkbMapNotify event if you get a XkbNewKeyboardNotify 
	event, so select for both. (#108406, Egmont Koblinger)

Thu Apr 17 09:57:44 2003  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtktreeview.c (validate_visible_area): remove infinite loop
	caused by not clearing the scroll_to_path.

2003-04-16  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkstyle.c: Doc additions and fixes.

	* gtk/gtktreeviewcolumn.c
	(_gtk_tree_view_column_get_neighbor_sizes): Doc fixes.

2003-04-14  Michael Natterer  <mitch@gimp.org>
